# ODM

./: configure.sh  gpu.Dockerfile  requirements.txt  test.Dockerfile
.github/workflows/: ghcr.yaml  test-build-prs.yaml
SuperBuild/: CMakeLists.txt
SuperBuild/cmake/: External-FPCFilter.cmake  External-OpenCV.cmake  External-OpenSfM.cmake
opendm/: config.py  osfm.py  photo.py  trim_reconstructions.py
snap/: snapcraft24.yaml
stages/: dataset.py  lightning_ortho.py
tests/: test_dataset.py  test_photo.py
tests/assets/datasets/single_image/images/: test_0001.jxl
